# ODE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
demos/: plot.py  test_alpha.cc  test_newmark.cc  test_ode.cc
mass_spring/: CMakeLists.txt  mass_spring.h  mass_spring.ipynb
src/: Newton.h  nonlinfunc.h  ode.h
